--- a/package.json
+++ b/package.json
@@ -20,5 +20,9 @@
   "homepage": "http://voracity.org/make-believe/",
   "devDependencies": {
     "electron-prebuilt": "^0.36.0"
+  },
+  "dependencies": {
+    "cheerio": "^1.0.0-rc.12",
+    "jsdom": "^22.1.0"
   }
 }
